Push amb a saco de coses

--- a/practica.tex
+++ b/practica.tex
@@ -11,9 +11,7 @@
 \date{\today}
 \lstset{
     numbers=none,
-    commentstyle=\color{magenta}, % comment color
-    keywordstyle=\color{blue}, % keyword color
-    stringstyle=\color{red} % string color
+    commentstyle=\color{red}, % comment color
 	breaklines=true,showstringspaces=false,
   	postbreak=\mbox{\textcolor{red}{$\hookrightarrow$}\space},
 	tabsize = 2,
