final push everything working

--- a/practica.tex
+++ b/practica.tex
@@ -378,13 +378,13 @@ As it can be seen, we traverse all the document once to generate a vector of str
 Vamos a poner unos cuantos experimentos
 
 \begin{figure}[h]
-	\includegraphics[scale=1]{JaccardSimilarity_KShinglesSimilarity.png} 
+	\includegraphics[scale=1]{JaccardSimilarityValueKshingles} 
   \caption{Relation between the k-shingles and the similarity outputed}
   \label{fig:KShinglesSimilarity}
 \end{figure}
 
 \begin{figure}[h]
-\includegraphics[scale=1]{JaccardSimilarity_KShinglesTime.png}
+\includegraphics[scale=1]{JaccardSimilarityTimeKshingles.pdf}
   \caption{Relation between the k-shingles and the time of execution}
   \label{fig:KShinglesTime}
 \end{figure}
