--- a/practica.tex
+++ b/practica.tex
@@ -456,7 +456,7 @@ J.\ Bank and B.\ Cole,
 \textit {Calculating the Jaccard similarity coefficient with map reduce for entity pairs in
 Wikipedia} (Wikipedia Similarity Team, 2008).
 
-\bibitem{Cambridge}
+\bibitem{Mining of Massive Datasets}
 J.\ Leskovec, A.\ Rajaraman and J.\ Ullman
 \textit{ Finding Similar Items. In Mining of Massive Datasets} (Cambridge University Press, 2014).
 
