--- a/practica.tex
+++ b/practica.tex
@@ -294,6 +294,13 @@ Where:
 An advantage of the multiplication method is that the value of m is not critical. We typically choose it to be a power of 2 ($m = 2^p$ for some integer $p$), since we can then easily implement the function on most computers.
 \\
 
+\begin{figure}[!h]
+	\centering
+	\includegraphics[scale=0.7]{graphs/MultiplicativeHashingDiagram.pdf}
+	\caption{Multiplicative Hashing}
+	\label{fig:MultiplicativeHashing}
+\end{figure}
+
 \begin{center}
 \begin{large}
 Pseudocode 
@@ -428,27 +435,40 @@ As it can be seen, we traverse all the document once to generate a vector of str
 
 Vamos a poner unos cuantos experimentos
 
-%\begin{figure}[h]
-%	\includegraphics[scale=1]{JaccardSimilarityValueKshingles} 
-%  \caption{Relation between the k-shingles and the similarity outputed}
-%  \label{fig:KShinglesSimilarity}
-%\end{figure}
-%
+\begin{figure}[!h]
+	\centering
+	\includegraphics[scale=0.5]{graphs/JaccardSimilarityValueKshingles.pdf} 
+	\caption{Relation between the K-shingles size and the similarity (for all of the possible pairwise combinations of 100 random permutations of a 50 words document)}
+	\label{fig:KShinglesSimilarity}
+\end{figure}
+
+\begin{figure}[!h]
+	\centering
+	\includegraphics[scale=0.55]{graphs/HashFunctionsJaccardAproxTime.pdf} 
+	\caption{Difference between the time used by different Hashing Functions}
+	\label{fig:HhashFunctionsTime}
+\end{figure}
+
 %\begin{figure}[h]
 %\includegraphics[scale=1]{JaccardSimilarityTimeKshingles.pdf}
 %  \caption{Relation between the k-shingles and the time of execution}
 %  \label{fig:KShinglesTime}
 %\end{figure}
 
+\begin{figure}[!h]
+	\centering
+	\includegraphics[scale=0.55]{graphs/JaccardSimilarityVsApproximation.pdf}
+	\caption{Approximated Jaccard Similarity for a pair of 2 documents with 60\% real similarity (K-shingles size = 9)}
+	\label{fig:JaccardVsApprox}
+\end{figure}
 
-
+\clearpage
 \section{Conclusion}
 
 %http://ethen8181.github.io/machine-learning/clustering_old/text_similarity/text_similarity.html
 
 %mirar aquest algoritme: http://www.xmailserver.org/diff2.pdf
-\newpage
-
+\clearpage
 \begin{thebibliography}{100}
 
 \bibitem{Concept of similarity}
