--- a/practica.tex
+++ b/practica.tex
@@ -27,7 +27,7 @@
 	\begin{abstract}
 
 Our goal is to identify similarities between documents. We have used the Jaccard Similarity theorem,  \textit{Local-Sensitive Hashing} algorithm
- and a \textit{k-shingles} and \textit{minhash signatures} representation of documents to evaluate the effectivity of the similarity computed and the time of computation. We have introduced three different hash functions to see its differences in performance.  Also  once determined the best parameters for the collection, we will give a conclusion about the best way to indentify the more similar documents. 
+ and a \textit{k-shingles} and \textit{minhash signatures} representation of documents to evaluate the effectivity of the similarity computed and the time of computation. We have introduced three different hash functions to see its differences in performance.  Also  once determined the best parameters, we will give a conclusion about the best way to indentify the more similar documents. 
 \end{abstract}
 
 \newpage
@@ -55,13 +55,25 @@ The Jaccard similarity, also known as Jaccard index is a statistical measure of 
 \centerline{\large $J(A,B)=\frac{\left |A\cap B  \right |}{ \left |A\cup B  \right |} = \frac{\left |A\cap B  \right |}{ \left|A\right|+\left|B\right|-\left |A\cap B  \right |} $}
 \bigbreak
 
-Calculating the similarity estimation using this approach could be solved using \textit{k} independent repetitions of the MinHash algorithm, however this would require $O(k \cdot |A|)$ running time. 
+Calculating the similarity estimation using this approach could be solved using \textit{k} independent repetitions of the MinHash algorithm, however this would require $O(k \times |A|)$ running time. \\\medskip
+
+Let's see an example of how the Jaccard Similarity can be calculated: \\ \\
+$A = \{0,1,2,5,6\}$,\\
+$B = \{0,2,3,4,5,7,9\}$ \\
+$J(A,B) = |A \cap  B| / |A \cup B| = |{0,2,5}| / |{0,1,2,3,4,5,6,7,9}| = 3/9 = 0.33$\\\medskip
+
 
 The complexity of our implementation is $O(n)$. To calculate the intersection of both sets we two iterators that iterate through both sets. When an element of a set is smaller than the other we increment its iterator and when they are equal we iterate both and a counter. Finally we use the value of the counter to apply the formula. 
-\lstset{language= C++}
+
+\begin{center}
+\begin{large}
+Pseudocode Jaccard Similarity
+\end{large}
+\end{center}
+
 \begin{lstlisting}
-double intersection(const set<string>& A, const set<string>& B){
-	int common = 0; 
+Intersection(A,B){
+	result = 0; 
 	auto it = A.begin(), it2 = B.begin();
 	while(it!= A.end() and it2 != B.end()){
 		if(*it < *it2){
@@ -73,15 +85,15 @@ double intersection(const set<string>& A, const set<string>& B){
 		else {
 			++it;
 			++it2;
-			++common;
+			++result;
 		}
 	}
-	return common; 
+	return result; 
 }
 
-double Jaccard(const set<string>& A, const set<string>& B){
-	double size_intersection = intersection(A,B);
-	return size_intersection / (A.size() + B.size() - size_intersection);
+Jaccard(A, B){
+	intersection = intersection(A,B);
+	result = intersection / (A.size() + B.size() - intersection);
 }
 
 \end{lstlisting}
@@ -111,18 +123,18 @@ Instead of using substrings direcly as shingles, we can pick a hash function tha
 A minhash function on sets is based on a permutation of the universal set. Given any such permutation, the minhash value for a set is that element of the set that appears first in the permuted order. 
 
 This algorithm provides us with a fast approximation to the Jaccard Similarity. The concept is to condense the large sets of unique shingles into a much smaller representations called ``signatures''. We will then use these signatures to measure the similarity between document, the signature won't give us the exact similarity but we will get a close estimate (the larger the number of signatures you choose, the more accurate the estimate). In this case we define the similarity like: 
-\\ \medskip
+ \medskip
 
 $$  sim(a,b) = \frac{1}{t} \sum_{i=1}^{t}\left\{
 1  \; \; \;  if \; \;  a_{i} = b_{i} \\
 \; \; \;  or \; \; \;  0 \; \; \;   if\: \;  a_{i} \neq  b_{i} 
-\}\right.  $$
+\}\right.  $$\medskip
 
 
 To implement the idea of generating randomly permutated rows, we don’t actually generate the random numbers, since it is not feasible to do so for large datasets, e.g. For a million itemset you will have to generate a million integers …, not to mention you have to do this for each signatures that you wish to generate. One way to avoid having to generate n permutated rows is to pick n hash functions in the form of :
 \medbreak
 \begin{center}
-$ h(x)=(ax+b) mod(c)$
+$ h(x)=(ax+b)\  mod(c)$
 \end{center}
 
 Where: 
@@ -274,7 +286,12 @@ In our project we have not choosen hash cryptographic functions (i.e. sha-1 or m
 
 In the modular hashing (also called the division method), we map a key $k$ into one of $m$ slots by taking the reminder of k divided by m. It takes the following form. 
 
-\begin{center} $h(k) = k (mod (m))$ \end{center}
+\begin{center} $h(k) = (ak+b)\  (mod \ m))$ \end{center}
+
+Where: 
+\begin{itemize}
+\item a and b are any random numbers smaller or equivalent to the maximum number of k 
+\end{itemize}
 
 When using the division method, we usually avoid certaing values of $m$. For example, $m = 2^p$ for some integer $p$, then $h(k)$ would be just the $p$-lowest-order bits of $k$. A prime value is often a good choice of $m$.
 
@@ -303,7 +320,7 @@ An advantage of the multiplication method is that the value of m is not critical
 
 \begin{center}
 \begin{large}
-Pseudocode 
+Pseudocode Multiplicative Hashing
 \end{large}
 \end{center}
 
@@ -393,43 +410,7 @@ Murmur3(key, len, seed)
 
 To generate the data for our experiments we have used the random\_shuffle function inside the C++ STL which rearranges the elements randomly. The function swaps the value of each element with that of some other randomly picked element. Its complexity is $O(n)$ with $n$ being  the distance between first and last minus one.
 
-\begin{lstlisting}
-
-ifstream inFile;
-ofstream outFile;
-
-void writeVector(const vector<string>& A, int i,string nameFile){
-    outFile.open(nameFile);
-    for(int j = 0; j < A.size(); ++j){
-        outFile << A[j]<< space symbol;
-    }
-    outFile.close();
-}
-
-int main(){
-    int n; 
-    cin>>n; //number of permutations that we want to create
-         
-    string nameFile;
-    cin>> nameFile; 
-    inFile.open(nameFile); //open the file
-    
-    vector<string> words; 
-    string testline;
-    while( inFile >> testline){
-    	words.push_back(testline); 
-    	//insert each word in a vector of strings
-    }
-    inFile.close();
-    for(int i = 0; i<n;++i){
-    	random_shuffle(words.begin(),words.end()); 
-    	writeVector(words,i,nom);
-    }
-    
-}\end{lstlisting}
-
-
-As it can be seen, we traverse all the document once to generate a vector of strings containing all the words and then we shuffle the vector and write the result in a document n times. \\
+As it can be seen, we traverse all the document once to generate a vector of strings containing all the words and then we shuffle the vector and write the result in a document as many times as permutations of a document we want. \\
 
 \section{Experiments}
 
@@ -498,7 +479,10 @@ C++ Standard Template Library,
 
 
 \bibitem{MurmurHash, Wikipedia}
-\textit{MurmurHash} \ Source: \url{https://en.wikipedia.org/wiki/MurmurHash}
+\textit{MurmurHash}. \ Source: \url{https://en.wikipedia.org/wiki/MurmurHash}
+
+\bibitem{Hash function}
+\texit{Hash function}. \ Source: \url{https://en.wikipedia.org/wiki/Hash_function}
 
 \bibitem{Introduction to Algorithms}
 T.\ H.\ Cormen, C.\ E.\ Leierson, R.\ L.\ Rivest and C.\ Stein, \textit{Introduction to Algorithms. Third Edition}
